--- a/app/src/main/res/layout/reports_fragment.xml
+++ b/app/src/main/res/layout/reports_fragment.xml
@@ -18,15 +18,12 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
             name="vm"
-            type="org.wbpbp.preshoes.feature.report.ReportViewModel" />
+            type="org.wbpbp.preshoes.feature.report.ReportsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
